[package]
name = "rustion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustion"
path = "src/main.rs"

[features]
default = ["full-role"]

# light role only support 2-level
light-role = []
full-role = ["petgraph"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5.41"
env_logger = "0.11"
log = "0.4"
rand_core = { version = "0.6.4" }
rand = "0.9"
russh = { git = "https://github.com/handewo/russh.git" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.46.0"
toml = "0.9"
# Database dependencies
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
] }
nu-ansi-term = "0.50.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
serde_json = "1.0"
rgb = { version = "0.8", default-features = false }
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10.3"
futures = "0.3"
russh-util = "0.52"
argon2 = "0.5.3"
crossbeam-channel = "0.5"
moka = { version = "0.12", features = ["future"] }
humantime = "2"
humantime-serde = "1"
crossterm = { git = "https://github.com/handewo/crossterm.git", features = [
  "no-tty",
] }
reedline = { git = "https://github.com/handewo/reedline.git", features = [
  "no-tty",
] }
inquire = { git = "https://github.com/handewo/inquire.git", features = [
  "no-tty",
  "date",
] }
ratatui = { git = "https://github.com/handewo/ratatui.git", default-features = false, features = [
  "no-tty",
  "underline-color",
  "all-widgets",
  "macros",
  "layout-cache",
] }
tui-textarea = { git = "https://github.com/handewo/tui-textarea.git", default-features = false, features = [
  "no-tty",
] }
ipnetwork = "0.21"
futures-util = "0.3.31"
petgraph = {version = "0.8.3", optional = true}
unicode-width="0.2.1"
lazy_static = "1.5.0"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.0"
serde_json = "1"
